# agentguard

./: .dockerignore  .env.example  .env.local  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  Dockerfile.api  Dockerfile.litellm  Dockerfile.ollama  Dockerfile.worker  FILETREE.md  LICENSE  Makefile  NOTICE  PLAN.md  README.md  SECURITY.md  SETUP_POSTMORTEM.md  SHOWCASE.md  STATUS.md  TODO.md  VALIDATION.md  compose-litellm.yml  docker-compose-prod.yml  docker-compose.infra.yml  docker-compose.litellm.yml  docker-compose.monitoring.yml  docker-compose.opik.override.yml  docker-compose.yml  litellm_config.yaml  loki-config.yml  mc_service_fix.txt  minimax.sh  opik-config.yaml  otel-collector-config.yaml  prometheus.yml  promptfooconfig.yaml  (+9 more)
.claude/: agentguard-files.md  settings.json  settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bandit.yml  ci.yml  python-app.yml  regression-gate.yml
.serena/: project.yml
.sota/: last-scan.json  rubric.ai-application-control-platform.json
app/: api.py  config.py  main.py  telemetry.py  tracing.py  utils.py
app/agent/: graph.py  mcp_client.py  prompts.py  service.py  tool_guard.py  tools.py
app/api/: __init__.py  app.py  schemas.py  streaming.py
app/cli/: app.py  common.py
app/core/: config.py  feature_flags.py  ids.py  logging.py  pii.py  telemetry.py  tracing.py
app/eval/: benchmark.py  deepeval_metrics.py  deepeval_runner.py  drift.py  evaluators.py  experiments.py  ragas_metrics.py  service.py
app/rag/: bm25_index.py  chain.py  hybrid_retriever.py  ingest.py  service.py
authelia/: configuration.yml  db.sqlite3  users_database.yml.example
config/: clickhouse_dev.xml
config/openwebui/: chat_id_injection.json
data/: README.md
docs/: ROADMAP.md  agent-workflow.md  agentguard.html  architecture.md  evaluation.md  index.html  repository-conventions.md  screenshots.md  system-overview.md
docs/deployment/: google-cloud.md  local.md
docs/recruiter/: README.md  engineering-impact-brief.md  reliability-and-quality-evidence.md  role-and-contribution-map.md
docs/superpowers/: performance-audit.md
guardrails/: custom_guardrails.py  semantic_cache.py
mock_corpus/: README.md
mock_corpus/01_company/: about.md  glossary.md  target-customers.md
mock_corpus/02_products/: feature-matrix.md  implementation-options.md  integrations.md  plans-and-pricing.md  product-overview.md
mock_corpus/03_sales_process/: demo-booking-process.md  legal-review-process.md  procurement-process.md  proposal-process.md  qualification-rules.md  renewal-and-expansion.md
notebooks/: benchmark.ipynb  benchmark_full.txt  benchmark_results_20260528_103913.csv  quality_drift.ipynb  validation.ipynb
openobserve/: import_dashboards.sh  setup_alerts.sh
postman/: AgentGuard.postman_collection.json
scripts/: build_dataset.py  compare_retrieval.py  demo_prospect_chat.py  init_litellm.py  load_test.py  load_watsonx_corpus.py  ollama_entrypoint.sh  online_eval_worker.py  openwebui_langfuse_filter.py  red_team.py  regression_gate.py  run_benchmark_experiment.py  seed_benchmark_dataset.py  seed_dataset.py  seed_langfuse_prompt.py  seed_score_configs.py  seed_watsonx_dataset.py  seed_watsonx_safety_dataset.py  setup_kuma.py  sync_feedback.py  utils.py  warmup_ollama.py  worker.py
tests/: CLAUDE.md  README.md  conftest.py  test_agent_graph.py  test_agent_integration.py  test_agent_llm.py  test_agent_tool_guard.py  test_agent_tools.py  test_api_routes.py  test_benchmark.py  test_bm25_index.py  test_bm25_warmup.py  test_chain.py  test_cli.py  test_config.py  test_deepeval_metrics.py  test_deepeval_runner.py  test_drift.py  test_evaluators.py  test_experiments.py  test_guardrails.py  test_hybrid_retriever.py  test_ingest.py  test_integration.py  test_ragas_metrics.py  test_red_team.py  test_regression_gate.py  test_semantic_cache.py  test_service.py  test_services.py  test_utils.py
(+1215 files in other folders)
