[project]
name = "langfuse-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Use `streamable_http_client` instead:DeprecationWarning",
    "ignore::langchain_core._api.deprecation.LangChainPendingDeprecationWarning",
    "ignore::Warning:langgraph.checkpoint.base",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead.:Warning",
]
markers = [
    "integration: requires live Docker stack (deselect with '-m not integration')",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
# Third-party libs (langchain, langfuse, litellm) have incomplete stubs;
# ignore missing-import noise so errors reflect our own code only.
reportMissingImports = "none"
reportMissingModuleSource = "none"
exclude = [
    "scripts/openwebui_langfuse_filter.py",
    "scripts/demo_prospect_chat.py",
    ".venv",
    "**/__pycache__",
]

[tool.coverage.run]
source = ["app", "guardrails"]
omit = [
    "*/test_*",
    "app/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
fail_under = 80
